@@ -6,6 +6,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Similar to the GET fix in V1.21.11, the same problem was occurring with
   INKEY(delay). This is now fixed.
 - GCOL action codes (at least for foreground colours) are now supported.
+  Background action code works at least for CLG.
   (The Turtle Graphics demo from the BBC Master welcome disc works properly!)
 - PLOT with Inverse code now supported.
 - Telstar client updated, enhancements from gARetH baBB - thank you!
